--- a/Chat/package.json
+++ b/Chat/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "web-vitals": "^3.4.0"
   }
 }
