--- a/Chat/package.json
+++ b/Chat/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
