--- a/Chat/package.json
+++ b/Chat/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
+    "@headlessui/react": "^1.7.17",
     "@iconify/react": "^4.1.1",
     "@mui/material": "^5.14.10",
     "axios": "^1.5.0",
@@ -26,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^13.2.2",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "simplebar-react": "^3.2.4",
