--- a/Chat/package.json
+++ b/Chat/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
@@ -25,6 +27,7 @@
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "emoji-mart": "^5.5.2",
     "framer-motion": "^10.16.4",
     "highlight.js": "^11.8.0",
     "jwt-decode": "^3.1.2",
@@ -43,6 +46,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.4",
+    "socket.io-client": "^4.7.2",
     "stylis-plugin-rtl": "^2.1.1",
     "yup": "^1.3.2"
   },
